[workspace]
resolver = "2"

members = ["memory_addr", "memory_set"]

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>", "aarkegz <aarkegz@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/arceos-org/arceos"
# documentation = "let member have their own documentation links"
repository = "https://github.com/arceos-org/axmm_crates"
# keywords = ["let member have their own keywords"]
categories = ["os", "memory-management", "no-std"]
rust-version = "1.70.0"
